--- a/appointment/templates/appointment/appointment/appointment.html
+++ b/appointment/templates/appointment/appointment/appointment.html
@@ -5,7 +5,7 @@
 {% endblock links %}
 
 {% block body %}
-    {% include 'general_includes/banner/banner.html' %}
+    {% include 'general_includes/banner/banner.html' with adress_string="Əsas Səhifə" name="Randevu" %}
     {% include 'appointment/appointment/includes/form_area.html' %}
 {% endblock body %}
 
