--- a/appointment/templates/appointment/appointment/includes/form_area.html
+++ b/appointment/templates/appointment/appointment/includes/form_area.html
@@ -68,7 +68,7 @@
                                 <div class="help-block with-errors"></div>
                             </div>
                             <div class="col-12 form-group">
-                                <textarea placeholder="Type Appintment Note" class="textarea form-control" name="note"
+                                <textarea placeholder="Type Appintment Note *" class="textarea form-control" name="note"
                                     id="form-message" rows="5" cols="20" data-error="Message field is required"
                                     required></textarea>
                                 <div class="help-block with-errors"></div>
