--- a/appointment/templates/appointment/feedback/includes/feedback_area.html
+++ b/appointment/templates/appointment/feedback/includes/feedback_area.html
@@ -14,7 +14,7 @@
                             <p class="details">
                                 Ən qısa müddətdə sizinlə əlaqə saxlayacağıq!
                             </p>
-                            <a href="#" class="item-btn">Ana Səhifə</a>
+                            <a href="{% url 'home' %}" class="item-btn">Ana Səhifə</a>
                         </div>
                         <div class="col-12 col-md-6 orer-1 order-lg-2">
                             <img src="{% static 'pages/feedback/pexels-gustavo-fring-4173249.jpg' %}" alt="404" class="img-fluid">
@@ -28,7 +28,7 @@
                             <p class="details">
                                 Məlumatlar göndərilərkən xəta baş verdi. Yenidən göndərməyi sınayın!
                             </p>
-                            <a href="#" class="item-btn">Qeydiyyat</a>
+                            <a href="{% url 'appointment' %}" class="item-btn">Qeydiyyat</a>
                         </div>
                         <div class="col-12 col-md-6 orer-1 order-lg-2">
                             <img src="{% static 'pages/feedback/pexels-pixabay-42230.jpg' %}" alt="404" class="img-fluid">
