--- a/templates/pages/about/about.html
+++ b/templates/pages/about/about.html
@@ -8,7 +8,7 @@
 
 
 {% block body %}
-    {% include 'general_includes/banner/banner.html' %}
+    {% include 'general_includes/banner/banner.html' with adress_string="Əsas Səhifə" name="Haqqımızda" %}
     {% include 'pages/about/includes/info_area.html' %}
     {% include 'pages/about/includes/qa_area.html' %}
 {% endblock body %}
