--- a/departament/templates/departament/departament_list/departament_list.html
+++ b/departament/templates/departament/departament_list/departament_list.html
@@ -5,7 +5,7 @@
 {% endblock links %}
 
 {% block body %}
-    {% include 'general_includes/banner/banner.html' %}
+    {% include 'general_includes/banner/banner.html' with adress_string="Əsas Səhifə" name="Şöbələr" %}
     {% include 'departament/departament_list/includes/departaments_area.html' with departaments=departaments%}
 
     <!-- Call to Action Area Start Here -->
