--- a/templates/general_includes/banner/banner.html
+++ b/templates/general_includes/banner/banner.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load adress_handler %}
 
 <!-- Inne Page Banner Area Start Here -->
 <section class="inner-page-banner bg-common inner-page-top-margin" data-bg-image="{% static 'general/base/img/figure/figure2.jpg' %}">
@@ -6,12 +7,12 @@
         <div class="row">
             <div class="col-12">
                 <div class="breadcrumbs-area">
-                    <h1>About Us</h1>
+                    <h1>{{ name }}</h1>
                     <ul>
-                        <li>
-                            <a href="index.html">Home</a>
-                        </li>
-                        <li>About</li>
+                        {% for adress in adress_string|adress_split %}
+                            <li>{{ adress }}</li>
+                        {% endfor %}
+                        <li>{{ name }}</li>
                     </ul>
                 </div>
             </div>
