--- a/appointment/templates/appointment/appointment/includes/links.html
+++ b/appointment/templates/appointment/appointment/includes/links.html
@@ -11,3 +11,4 @@
 <link rel="stylesheet" href="{% static 'general/base/css/elements.css' %}">
 <!-- Custom CSS -->
 <link rel="stylesheet" href="{% static 'general/base/style.css' %}">
+<script src="https://www.google.com/recaptcha/api.js"></script>
