--- a/appointment/templates/appointment/appointment/includes/scripts.html
+++ b/appointment/templates/appointment/appointment/includes/scripts.html
@@ -1,5 +1,9 @@
 {% load static %}
-
+<script>
+    function onSubmit(token) {
+        document.getElementById("appointment-form").submit();
+    }
+</script>
 <!-- Owl Carousel Js -->
 <script src="{% static 'general/base/vendor/OwlCarousel/owl.carousel.min.js' %}"></script>
 <!-- Meanmenu Js -->
