--- a/templates/general_includes/side_appointment/side_appointment.html
+++ b/templates/general_includes/side_appointment/side_appointment.html
@@ -1,6 +1,7 @@
+<script src="https://www.google.com/recaptcha/api.js"></script>
 <div class="widget widget-appointment">
     <h3 class="section-title-light title-bar-light">Book Appointment</h3>
-    <form action="{% url 'appointment' %}" method="post">
+    <form id="appointment-form" action="{% url 'appointment' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
             <select name="departament" class="select2" data-error="Phone field is required">
@@ -58,7 +59,19 @@
             <div class="help-block with-errors"></div>
         </div>
         <div class="form-group text-center">
-            <button class="item-btn" type="submit">BOOK NOW<i class="fas fa-chevron-right"></i></button>
+            <button 
+                class="item-btn g-recaptcha" 
+                data-sitekey="6LcNJ9sbAAAAAGalq-RFjtKWAEMDaOQp2AnCCU5T"
+                data-callback="onSubmit" 
+                data-action="submit">
+                BOOK NOW
+                <i class="fas fa-chevron-right"></i>
+            </button>
         </div>
     </form>
 </div>
+<script>
+    function onSubmit(token) {
+        document.getElementById("appointment-form").submit();
+    }
+</script>
