--- a/departament/templates/departament/departament_detail/departament_detail.html
+++ b/departament/templates/departament/departament_detail/departament_detail.html
@@ -20,7 +20,7 @@
             <div class="sidebar-widget-area sidebar-break-md col-xl-3 col-lg-4 col-12 no-equal-item">
                 {% include 'departament/departament_detail/includes/category_area.html' %}
                 {% include 'departament/departament_detail/includes/schedule_area.html' %}
-                {% include 'general_includes/side_appointment/side_appointment.html' with selected_departament=departament.slug %}
+                {% comment %} {% include 'general_includes/side_appointment/side_appointment.html' with selected_departament=departament.slug %} {% endcomment %}
             </div>
         </div>
     </div>
