--- a/blog/templates/blog/article/includes/share_area.html
+++ b/blog/templates/blog/article/includes/share_area.html
@@ -1,14 +1,21 @@
-<div class="blog-social">
+<div id="share-section" class="blog-social">
     <h3>Share This Post:</h3>
     <ul>
         <li class="facebook">
-            <a href="#"><i class="fab fa-facebook-square"></i>facebook</a>
+            <a id="fb-share-button" href="#"><i class="fab fa-facebook-square"></i>facebook</a>
+        </li>
+        <li>
+            <a id="whatsapp-share-button" href="#">
+                <i class="fab fa-whatsapp-square text-success" aria-hidden="true"></i>whatsapp
+            </a>
         </li>
         <li class="twitter">
-            <a href="#"><i class="fab fa-twitter-square"></i>twitter</a>
+            <a id="twitter-share-button" href="#"><i class="fab fa-twitter-square"></i>twitter</a>
         </li>
-        <li class="google">
-            <a href="#"><i class="fab fa-google-plus-square"></i>google plus</a>
+        <li class="">
+            <a id="copy-url" href="#" data-toggle="tooltip" data-placement="bottom" title="Copied" data-trigger="click">
+                <i class="fa fa-link text-secondary" aria-hidden="true"></i>kopyala
+            </a>
         </li>
     </ul>
 </div>
