--- a/templates/layouts/main_layout/includes/header.html
+++ b/templates/layouts/main_layout/includes/header.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row no-gutters d-flex align-items-center">
                 <div class="col-lg-2 col-md-2 logo-area-layout1">
-                    <a href="index.html" class="temp-logo">
+                    <a href="{% url 'home' %}" class="temp-logo">
                         <img src="{% static 'general/base/img/logo-light.png' %}" alt="logo" class="img-fluid">
                     </a>
                 </div>
@@ -49,7 +49,7 @@
                     <div class="header-action-items-layout1">
                         <ul>
                             <li>
-                                <a href="{% url 'appointment' %}" class="action-items-light-btn ml-3">Appointment</a>
+                                <a href="{% url 'appointment' %}" class="action-items-light-btn ml-3">Onlayn Randevu</a>
                             </li>
                         </ul>
                     </div>
