--- a/templates/layouts/main_layout/main_layout.html
+++ b/templates/layouts/main_layout/main_layout.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="az">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="elmed klinikası, klinika, həkim, müalicə, diaqnoz, xəstəxana, elmed, xəstəlik, cərrah">
@@ -19,14 +19,14 @@
     <!-- Modernizr Js -->
     <script src="{% static 'general/base/js/main.js' %}"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    {% comment %} <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y932SVCY23"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y932SVCY23"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
         gtag('config', 'G-Y932SVCY23');
-    </script> {% endcomment %}
+    </script>
 
 </head>
 <body>
