--- a/templates/pages/home/includes/blog_area.html
+++ b/templates/pages/home/includes/blog_area.html
@@ -2,7 +2,7 @@
 <section class="blog-wrap-layout4 bg-light-secondary100">
     <div class="container">
         <div class="section-heading heading-dark text-center heading-layout1">
-            <h2>Our Latest News</h2>
+            <h2><a href="{% url 'blog' %}" class="text-dark">Our Latest News</a></h2>
             <p>Eimply dummy text of the printing and typesetting industry industry's standard</p>
         </div>
         <div class="row">
