--- a/templates/pages/home/includes/departaments_area.html
+++ b/templates/pages/home/includes/departaments_area.html
@@ -5,7 +5,7 @@
     <img class="left-img img-fluid" src="{% static 'general/base/img/figure/figure8.png' %}" alt="figure">
     <div class="container">
         <div class="section-heading heading-dark text-left heading-layout1">
-            <h2>Our Departments</h2>
+            <h2><a href="{% url 'departament-list' %}" class="text-dark">Our Departments</a></h2>
             <p>Dedicated Services</p>
             <div id="owl-nav1" class="owl-nav-layout1">
                 <span class="rt-prev">
