--- a/templates/pages/home/includes/doctors_area.html
+++ b/templates/pages/home/includes/doctors_area.html
@@ -6,7 +6,7 @@
     <img class="right-img img-fluid" src="{% static 'general/base/img/figure/figure5.png' %}" alt="figure">
     <div class="container">
         <div class="section-heading heading-dark text-left heading-layout1">
-            <h2>Specialist Doctors</h2>
+            <h2><a href="{% url 'doctor-list' %}" class="text-dark">Specialist Doctors</a></h2>
             <p>Experienced Doctor</p>
             <div id="owl-nav2" class="owl-nav-layout1">
                 <span class="rt-prev">
