--- a/blog/templates/blog/article/includes/scripts.html
+++ b/blog/templates/blog/article/includes/scripts.html
@@ -8,3 +8,4 @@
 <script src="{% static 'general/base/js/jquery.magnific-popup.min.js' %}"></script>
 <!-- Isotope Js -->
 <script src="{% static 'general/base/js/isotope.pkgd.min.js' %}"></script>
+<script src="{% static 'blog/article/article.js' %}"></script>
