--- a/templates/pages/home/home.html
+++ b/templates/pages/home/home.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#fff">
 
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<meta property="og:url"           content="https://www.elmed.az"/>
+	<meta property="og:url"           content="{{ request.build_absolute_uri }}"/>
 	<meta property="og:type"          content="website" />
 	<meta property="og:title"         content="Elmed Klinikası - Birlikdə daha sağlam həyat quraq!"/>
 	<meta property="og:description"   content="Klinikamızda tətbiq olunan yüksək tibbi texnologiyalar vasitəsilə pasiyentlərin sağlamlığını tam şəkildə qoruyaraq, cəmiyyətimizə ən yaxşı xidməti göstərməyə çalışırıq."/>
