--- a/templates/general_includes/side_appointment/side_appointment.html
+++ b/templates/general_includes/side_appointment/side_appointment.html
@@ -26,34 +26,34 @@
             <div class="help-block with-errors"></div>
         </div>
         <div class="form-group">
-            <input type="text" placeholder="Patient Name *" class="form-control" name="name" id="form-name"
+            <input type="text" placeholder="Ad Soyad (məcburi)" class="form-control" name="name" id="form-name"
                 data-error="Name field is required" required maxlength="50">
             <div class="help-block with-errors"></div>
         </div>
         <div class="form-group">
-            <input type="text" placeholder="Phone *" class="form-control" name="phone" id="form-phone"
+            <input type="text" placeholder="Telefon (məcburi)" class="form-control" name="phone" id="form-phone"
                 data-error="Phone field is required" required maxlength="50">
             <div class="help-block with-errors"></div>
         </div>
         <div class="form-group">
-            <input type="email" placeholder="E-mail" class="form-control" name="email" id="form-email"
+            <input type="email" placeholder="Mail" class="form-control" name="email" id="form-email"
                 data-error="E-mail field is required" required maxlength="50">
             <div class="help-block with-errors"></div>
         </div>
         <div class="form-group">
             <i class="far fa-calendar-alt"></i>
-            <input type="text" class="form-control rt-date" placeholder="Appointment Date"
+            <input type="text" class="form-control rt-date" placeholder="Tarix"
                 name="date" id="form-date" data-error="Subject field is required"/>
             <div class="help-block with-errors"></div>
         </div>
         <div class="form-group">
             <i class="far fa-clock"></i>
-            <input type="text" class="form-control rt-time" placeholder="Time" name="time" id="form-time"
+            <input type="text" class="form-control rt-time" placeholder="Vaxt" name="time" id="form-time"
                 data-error="Subject field is required" />
             <div class="help-block with-errors"></div>
         </div>
         <div class="form-group">
-            <textarea placeholder="Type Appintment Note *" class="textarea form-control" name="note"
+            <textarea placeholder="Randevu Səbəbi (məcburi)" class="textarea form-control" name="note"
                 id="form-message" rows="5" cols="20" data-error="Message field is required"
                 required></textarea>
             <div class="help-block with-errors"></div>
