--- a/templates/layouts/main_layout/includes/header.html
+++ b/templates/layouts/main_layout/includes/header.html
@@ -24,7 +24,7 @@
                         <nav id="dropdown">
                             <ul>
                                 <li>
-                                    <a href="{% url 'home' %}">Əsas Səhifə</a>
+                                    <a href="{% url 'home' %}">Baş Səhifə</a>
                                 </li>
                                 <li>
                                     <a href="{% url 'departament-list' %}">Şöbələr</a>
