--- a/templates/layouts/main_layout/main_layout.html
+++ b/templates/layouts/main_layout/main_layout.html
@@ -14,7 +14,7 @@
     {% include 'layouts/main_layout/includes/links.html' %}
     {% block links %}
     {% endblock links %}
-    <!-- Custom Style -->
+    <!-- My Custom Style -->
     <link rel="stylesheet" href="{% static 'layouts/main_layout/css/custom_main_layout.css' %}">
     <!-- Modernizr Js -->
     <script src="{% static 'general/base/js/main.js' %}"></script>
