--- a/templates/pages/home/includes/doctors_area.html
+++ b/templates/pages/home/includes/doctors_area.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!-- Team Area Start Here -->
-<section class="team-wrap-layout1 bg-light-secondary100">
+<section class="team-wrap-layout1 bg-light-secondary100 pt-0">
     <img class="left-img img-fluid" src="{% static 'general/base/img/figure/figure4.png' %}" alt="figure">
     <img class="right-img img-fluid" src="{% static 'general/base/img/figure/figure5.png' %}" alt="figure">
     <div class="container">
