--- a/templates/pages/home/includes/blog_area.html
+++ b/templates/pages/home/includes/blog_area.html
@@ -1,5 +1,5 @@
 <!-- Blog-Area Start Here -->
-<section class="blog-wrap-layout4 bg-light-secondary100">
+<section class="blog-wrap-layout4 bg-light-secondary100 pt-0">
     <div class="container">
         <div class="section-heading heading-dark text-center heading-layout1">
             <h2><a href="{% url 'blog' %}" class="text-dark">Our Latest News</a></h2>
